# cast-me

./: .env  .gitignore  Cargo.toml  README.md  index.html
app/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts  webpack.config.js
app/public/: global.css  index.html
app/src/: App.svelte  Chat.svelte  Connect.svelte  Share.svelte  app.css  network.js  network.ts  peering.js  peering.ts  protocol.ts  socketStore.js  stores.js  stores.ts
src/: broker.rs  main.rs  peer.rs  peer_actor.rs  peer_id.rs  routes.rs  ws_protocol.rs
src/actors/: broker.rs  mod.rs  peer.rs  protocol.rs
src/basic/: broker.rs  mod.rs  peer.rs
static/: index.html
testcerts/: cert.pem  key.pem
