[package]
name = "cast-me"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
env_logger = "0.9"
color-backtrace = "0.5"
serde_json = "1.0"
human-hash = { git = "https://github.com/hoodie/human-hash-rs" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]


[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.warp]
features = ["tls"]
version = "0.3"
[profile.dev.package."*"]
opt-level = 3