[package]
name = "cast-me"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
color-backtrace = "0.5"
serde_json = "1.0"
human-hash = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
config = "0.13.0"
#console-subscriber = "0.1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.23"
features = ["full"]


[dependencies.uuid]
version = "1.2"
features = ["v4", "serde"]

[dependencies.warp]
features = ["tls"]
version = "0.3"
[profile.dev.package."*"]
opt-level = 3
