[package]
name = "cast-me"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
color-backtrace = "0.7"
serde_json = "1"
human-hash = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
config = "0.15"
anyhow = "1.0"
tower-http = { version = "0.6.7", features = ["fs"] }
#console-subscriber = "0.1.0"

[dependencies.axum]
version = "0.8"
features = ["ws"]

[dependencies.axum-server]
version = "0.7"
features = ["tls-rustls"]

[dependencies.hannibal]
path = "../hannibal"
features = ["tokio_runtime"]
version = "0.14"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.warp]
features = ["websocket"]
version = "0.4"

[profile.dev.package."*"]
opt-level = 3
